welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: not found: value i
	i=0
        ^ColumnByColumn:19: error: not found: value i
			i=i+1
                        ^ColumnByColumn:20: error: not found: value i
			setPos(i,1)
                               ^