welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() 
{
	
def posfin(): Boolean=
{
	if (getX()==getMondeLargeur()-1 && getY()==getMondeHauteur()-1)
	{
		return true
	} else return false
}

def move()
{
	i=0
	while (posfin()==false)
	{
		if (getY==getMondeHauteur-1)
		{
			i=i+1
			setPos(i,1)
		}
		else
		{
			recule()
		}
	}
}
	
move()

}
